Discard pending changelog fetch jobs before cache reloads. This prevents changelog jobs finishing when the QApt::Backend is in a state where package pointers are invalid.

BUG:270920